# bbc-basic

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DISASSEMBLY.md  GLOSSARY.md  LICENSE  README.md  README.md.j2  acornaeology.json  fantasm.toml  generate_readme.py  pyproject.toml
.github/workflows/: verify.yml
docs/BBC_User_Guide/: 00_Introduction.md  01_1._Getting_going.md  02_2._Commands.md  03_3._An_introduction_to_variables.md  04_4._A_simple_program.md  05_5._Recording_programs_on_cassette.md  06_6._Sample_programs.md  07_7._AUTO_DELETE_REM_RENUMBER.md  08_8._Introducing_graphics.md  09_9._More_on_variables.md  10_10._PRINT_formatting.md  11_11._Input.md  12_12._GET_INKEY.md  13_13._TIME_RND.md  14_14._REPEAT_UNTIL_TRUE_FALSE.md  15_15._FOR...NEXT.md  16_16._IF...THEN...ELSE_TRUE_and_FALSE.md  17_17._Procedures.md  18_18._Functions.md  19_19._GOSUB.md  20_20._ON_GOTO_ON_GOSUB.md  21_21._Yet_more_on_variables.md  22_22._READ_DATA_RESTORE.md  23_23._Integer_handling.md  24_24._String_handling.md  25_25._User_Defined_Keys.md  26_26._Operator_precedence.md  27_27._Error_handling.md  28_28._Teletext_and_MODE_7.md  29_29._Advanced_Graphics.md  30_30._Sound.md  31_31._File_handling.md  32_32._Speeding_up_programs.md  33_33._BASIC_keywords.md  34_34._VDU_drivers.md  35_35._Cassette_files.md  36_36._Changing_filing_systems.md  37_37._Merge_BASIC_programs.md  38_38._Using_printers.md  39_39._Indirection_operators.md  (+9 more)
tools/: annotation_status.py  banner_status.py  correlate_jgh.py  gaps.py  show_routine.py
versions/basic-2/: ANNOTATION_PROGRESS.md  BANNER_PROGRESS.md  (+3 more)
(+35 files in other folders)
